@@ -1,5 +1,6 @@
 == master
 
+* Only catch :halt during before / after transition callbacks
 * Fix ActiveRecord predicates being overwritten if they're already defined in the class
 * Allow machine options to be set on an integration-wide basis
 * Turn transactions off by default in DataMapper integrations
